--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="A gép választásod"
+        android:text="A gép választása"
         android:textSize="35sp"
         android:layout_below="@+id/oKep"
         android:id="@+id/oIras"
